Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.6(EOL)
-
None
-
Master and single semi-sync slave
Description
The user gets a lot of these errors randomly in the error log:
"Read semi-sync reply magic number error"
This is probably some missing or out of sync packet as part of semi sync replication.
We should try to repeat this by have our QA and benchmark teams run tests on a master and semi-sync slave to try to repeat the issue.
Attachments
Issue Links
- causes
-
MDEV-32940 Semi-sync Slave Falsely Logs that Master has Semi-sync Disabled
-
- Closed
-
-
MDEV-32943 Stopping Semi-sync Slave Reports that it is Falling Back to Async Mode
-
- Closed
-
-
MDEV-32944 Rpl_semi_sync_slave_enabled sysvar Should Not Be Modifiable While IO Thread is Running
-
- Closed
-
-
MDEV-32945 Rpl_semi_sync_master_status is ON Without Any Connected Slaves
-
- Open
-
-
MDEV-32947 Semi-sync with Multi-source Checksum Verification Failure
-
- Confirmed
-
-
MDEV-32960 Semi-sync ACKed Transaction can Timeout and Switch Off Semi-sync with Multiple Replicas
-
- Closed
-
-
MDEV-32961 Semi-sync Primary Segfaults on Net Error
-
- Closed
-
-
MDEV-33331 IO Thread Relay Log Inconsistent Statistics After MDEV-32551
-
- Open
-
-
MDEV-33546 Rpl_semi_sync_slave_status is ON When Replication Is Not Configured
-
- Closed
-
-
MDEV-39583 Replace the slave-side graceful self-KILL with the master-side COM_QUIT handing in Semi-Synchronous Replication
-
- In Progress
-
- relates to
-
MDEV-11853 semisync thread can be killed after sync binlog but before ACK in the sync state
-
- Closed
-
-
MDEV-24773 slave_compressed_protocol doesn't work properly with semi-sync replication
-
- Closed
-
-
MDEV-28114 Semi-sync Master ACK Receiver Thread Can Error on COM_QUIT
-
- Closed
-
-
MDEV-28141 Slave crashes with Packets out of order when connecting to a shutting down master
-
- Open
-
-
MDEV-28306 Slave I/O: Fatal error: Failed to run 'after_read_event' hook, Internal MariaDB error code: 1593
-
- Open
-
-
MDEV-29369 rpl.rpl_semi_sync_shutdown_await_ack fails regularly with Result content mismatch
-
- Closed
-
-
MDEV-32365 detailize the semisync replication magic number error
-
- Closed
-
-
MDEV-32385 Semi-Sync Ack_Receiver Thread Should Allow COM_QUIT Command
-
- Closed
-
-
MDEV-32792 Second Semi-sync Replica Can Hang at Connect Time
-
- Closed
-
-
MDEV-33327 rpl_seconds_behind_master_spike Sensitive to IO Thread Stop Position
-
- Closed
-
-
MXS-4792 Semi-sync replication through MaxScale causes errors on STOP SLAVE
-
- Closed
-
-
MXS-4793 Unknown command errors when semi-sync replication runs through MaxScale
-
- Closed
-