sql/net_serv.cc
@@ -271,7 +271,7 @@ my_bool net_realloc(NET *net, size_t length)
     -1   Don't know if data is ready or not
 */
 
-#if !defined(EMBEDDED_LIBRARY) && defined(DBUG_OFF)
+#if (!defined(EMBEDDED_LIBRARY) && defined(DBUG_OFF)) || defined(USE_NET_CLEAR)
 
 static int net_data_is_ready(my_socket sd)
 {
@@ -334,6 +334,7 @@ static int net_data_is_ready(my_socket sd)
   @param net			NET handler
   @param clear_buffer           if <> 0, then clear all data from comm buff
 */
+
 
 void net_clear(NET *net, my_bool clear_buffer __attribute__((unused)))
 {
@@ -1057,8 +1058,10 @@ retry:
 	  {					/* Probably in MIT threads */
 	    if (retry_count++ < net->retry_count)
 	      continue;
-	    EXTRA_DEBUG_fprintf(stderr, "%s: read looped with error %d, aborting thread\n",
-		    my_progname,vio_errno(net->vio));
+	    EXTRA_DEBUG_fprintf(stderr, "%s: read looped with error %d on "
+                                "file %lld, aborting thread\n",
+                                my_progname, vio_errno(net->vio),
+                                (longlong) vio_fd(net->vio));
 	  }
 #ifndef MYSQL_SERVER
 	  if (length != 0 && vio_errno(net->vio) == SOCKET_EINTR)
